# src/domains/task/entities/task.ts
@@ -6,7 +6,8 @@ import { Id } from '@/shared/domains/id'
 import { createUUId } from '@/shared/libs/createId'
 
 export type TaskProps = {
-  assignedUserId: Id
+  assignedUserIds: Id[]
+  createdUserId: Id
   taskItems: TaskItem[]
   taskLabels: TaskLabel[]
   taskName: string
@@ -16,9 +17,33 @@ export type TaskProps = {
 }
 
 export type TaskCreateProps = Omit<TaskProps, 'taskItems' | 'taskLabels'> &
-  Partial<Pick<TaskProps, 'taskLabels' | 'assignedUserId'>>
+  Partial<Pick<TaskProps, 'taskLabels' | 'assignedUserIds'>>
 
 export class Task extends Entity<TaskProps> {
+  get assignedUserIds(): Id[] {
+    return this.props.assignedUserIds
+  }
+  get createdUserId(): Id {
+    return this.props.createdUserId
+  }
+  get taskLabels(): TaskLabel[] {
+    return this.props.taskLabels
+  }
+  get taskItems(): TaskItem[] {
+    return this.props.taskItems
+  }
+  get taskName(): string {
+    return this.props.taskName
+  }
+  get taskStatus(): TaskStatus {
+    return this.props.taskStatus
+  }
+  get expiredOn(): Date {
+    return this.props.expiredOn
+  }
+  get startedAt(): Date {
+    return this.props.startedAt
+  }
   static create(props: TaskCreateProps): Task {
     const { taskLabels, ...other } = props
 
@@ -33,10 +58,19 @@ export class Task extends Entity<TaskProps> {
   }
   validate(): void {
     if (!this.props.taskName || this.props.taskName.length > 127) {
-      throw new Error('task name error')
+      throw new Error('task name length must be less than 127')
     }
-    if (this.props.expiredOn.getTime() > this.props.startedAt.getTime()) {
-      throw new Error('expiredOn > startedAt')
+    if (this.props.assignedUserIds.length > 16) {
+      throw new Error('assigned user must be no more than 16')
+    }
+    if (this.props.taskItems.length > 32) {
+      throw new Error('task items must be no more than 32')
+    }
+    if (this.props.expiredOn.getTime() < this.props.startedAt.getTime()) {
+      throw new Error('expired date must be later than the started time')
+    }
+    if (this.props.taskLabels.length > 8) {
+      throw new Error('task labels must be no more than 8')
     }
   }
 }
