# src/domains/task/entities/taskStatus.ts
@@ -2,16 +2,37 @@ import { Entity } from '@/shared/domains/entity'
 import { Id } from '@/shared/domains/id'
 import { createUUId } from '@/shared/libs/createId'
 
+export const DefaultTaskStatues = {
+  TODO: 'TODO',
+  DOING: 'DOING',
+  DONE: 'DONE',
+  ARCHIVE: 'ARCHIVE'
+} as const
 export type TaskStatusProps = {
-  taskStatusId: Id
   taskStatusName: string
 }
-
 export type TaskStatusCreateProps = TaskStatusProps
 
-export class TaskStatus extends Entity<TaskStatusProps> {
-  static create(props: TaskStatusProps): TaskStatus {
+export type TaskStatusReconstructProps = TaskStatusCreateProps & {
+  taskStatusId: Id
+  createdAt?: Date
+}
+
+export class TaskStatus extends Entity<TaskStatusCreateProps> {
+  get taskStatusName(): string {
+    return this.props.taskStatusName
+  }
+  static create(props: TaskStatusCreateProps): TaskStatus {
     return new TaskStatus({ id: createUUId(), props })
+  }
+  static reconstruct(props: TaskStatusReconstructProps) {
+    const { taskStatusId, createdAt, ...other } = props
+
+    return new TaskStatus({
+      id: taskStatusId,
+      createdAt,
+      props: { ...other }
+    })
   }
   validate(): void {
     if (this.props.taskStatusName.length > 16) {
